WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
105635
Invalidation of some SVG filter attributes on HTML content doesn't work
https://bugs.webkit.org/show_bug.cgi?id=105635
Summary
Invalidation of some SVG filter attributes on HTML content doesn't work
Stephen White
Reported
2012-12-21 07:56:49 PST
Created
attachment 180523
[details]
Test case (click on the red box) Invalidation of some SVG filter attributes on HTML content doesn't work (see attachment -- clicking on the red box should turn it green). This is because the HTML RenderLayer invalidation happens only in RenderSVGResourceContainer::markAllClientsForInvalidation() (the bottom section which invalidates m_clientLayers), but attribute changes sometimes go through RenderSVGResourceContainer::markClientForInvalidation(), called by RenderSVGResourceFilter::primitiveAttributeChanged().
Attachments
Test case (click on the red box)
(514 bytes, text/html)
2012-12-21 07:56 PST
,
Stephen White
no flags
Details
Patch
(6.47 KB, patch)
2012-12-21 09:12 PST
,
Stephen White
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Stephen White
Comment 1
2012-12-21 09:12:34 PST
Created
attachment 180528
[details]
Patch
Dirk Schulze
Comment 2
2013-01-04 11:50:05 PST
Comment on
attachment 180528
[details]
Patch Sounds reasonable for me. r=me.
WebKit Review Bot
Comment 3
2013-01-04 12:41:43 PST
Comment on
attachment 180528
[details]
Patch Clearing flags on attachment: 180528 Committed
r138835
: <
http://trac.webkit.org/changeset/138835
>
WebKit Review Bot
Comment 4
2013-01-04 12:41:47 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug