Source/WebCore/rendering/svg/RenderSVGResourceContainer.cpp
@@ -114,13 +114,18 @@ void RenderSVGResourceContainer::markAllClientsForInvalidation(InvalidationMode 
         RenderSVGResource::markForLayoutAndParentResourceInvalidation(client, needsLayout);
     }
 
+    markAllClientLayersForInvalidation();
+
+    m_isInvalidating = false;
+}
+
+void RenderSVGResourceContainer::markAllClientLayersForInvalidation()
+{
 #if ENABLE(CSS_FILTERS)
     HashSet<RenderLayer*>::iterator layerEnd = m_clientLayers.end();
     for (HashSet<RenderLayer*>::iterator it = m_clientLayers.begin(); it != layerEnd; ++it)
         (*it)->filterNeedsRepaint();
 #endif
-
-    m_isInvalidating = false;
 }
 
 void RenderSVGResourceContainer::markClientForInvalidation(RenderObject* client, InvalidationMode mode)
